# analysis

./: .gitignore  CLAUDE.md  GEMINI.md  pyproject.toml  requirements.txt
.agents/: AGENTS.md
capex_chip_transmission/: README.md  sources.md
capex_chip_transmission/scripts/: 01_collect.py  02_clean.py  03_analyze.py  config.py
docs/context/: DECISIONS.md  GLOSSARY.md  PROJECT.md  STATE.md
research/ai_power_demand/: README.md  research_plan.md  sources.md
research/ai_power_demand/data/processed/: grid_parameters_clean.parquet  hyperscaler_ppas_clean.parquet  projections_clean.parquet
research/ai_power_demand/data/raw/: grid_parameters.csv  hyperscaler_ppas.csv  top_down_projections.csv
research/ai_power_demand/output/: report.en.ipynb  report.zh.ipynb
research/ai_power_demand/output/tables/: us_china_comparison.csv
research/ai_power_demand/scripts/: 01_collect.py  02_clean.py  03_analyze.py  config.py
research/capex_chip_transmission/: README.md  research_plan.md  sources.md
research/capex_chip_transmission/data/processed/: panel.parquet
research/capex_chip_transmission/doc/: extended_semiconductor_subsectors.md  foundry_designer_chain.md  hbm_supply_chain.md
research/capex_chip_transmission/output/: report.en.ipynb  report.zh.ipynb
research/capex_chip_transmission/scripts/: 01_collect.py  02_clean.py  03_analyze.py
scripts/: new_project.py
tests/: test_io.py  test_money.py  test_plotting.py  test_stats.py  test_timeseries.py  test_transforms.py
utils/: __init__.py  io.py  money.py  plotting.py  stats.py  timeseries.py  transforms.py
(+20 files in other folders)
