[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis-utils"
version = "0.1.0"
description = "Shared, tested common library for reproducible quantitative research projects."
requires-python = ">=3.10"

[tool.setuptools]
packages = ["utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
